wip: initial kafka producer
