# api/openapi.yaml
@@ -15,12 +15,6 @@ paths:
   /auth/register:
     post:
       operationId: register
-      parameters:
-      - in: header
-        name: X-XSRF-TOKEN
-        required: true
-        schema:
-          type: string
       requestBody:
         content:
           application/json:
@@ -51,6 +45,13 @@ paths:
             schema:
               $ref: '#/components/schemas/user-login-dto'
       summary: Logs the user in
+      tags:
+      - user
+      - auth
+  /auth/logout:
+    post:
+      operationId: logout
+      summary: Logs the user out
       tags:
       - user
       - auth
@@ -94,11 +95,6 @@ paths:
     post:
       operationId: placeBet
       parameters:
-      - in: header
-        name: X-XSRF-TOKEN
-        required: true
-        schema:
-          type: string
       - description: Id of the market state to place the bet on.
         in: path
         name: marketStateId
@@ -128,12 +124,6 @@ paths:
   /match:
     post:
       operationId: createMatch
-      parameters:
-      - in: header
-        name: X-XSRF-TOKEN
-        required: true
-        schema:
-          type: string
       requestBody:
         content:
           application/json:
@@ -174,11 +164,6 @@ paths:
     put:
       operationId: updateMatchAndStates
       parameters:
-      - in: header
-        name: X-XSRF-TOKEN
-        required: true
-        schema:
-          type: string
       - description: Id of match to update.
         in: path
         name: id
